<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titlebox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/weightbox"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/titlebox"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/hintw"
        android:textColorHint="#8F000000"
        android:inputType="number"
        android:importantForAutofill="no"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/heightbox"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/weightbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/hinth"
        android:textColorHint="#8F000000"
        android:inputType="number"
        android:importantForAutofill="no"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/but"
        android:text="@string/textbut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_below="@id/heightbox"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/out"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/but"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/hintout"
        android:textColorHint="#8F000000"
        android:focusable="false"
        android:inputType="number"
        android:textAlignment="center"
        android:importantForAutofill="no"/>
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/out"
        android:hint="@string/hintres"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:textColorHint="@color/unkn"/>
    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:text="@string/ab"
        android:textStyle="bold"
        android:textSize="12sp"
        android:foregroundTint="@color/white"
        android:textColor="#A6000000"/>


</RelativeLayout>